 /* $Id: ChangeLog,v 1.830 2000-03-22 20:12:07 sandervl Exp $ */

 2000-03-22: Sander van Leeuwen <sandervl@xs4all.nl>
	- WSOCK32\NEW: Completely rewritten (removed dependancy on pmwsock)
                       Untested and unfinished (WSAAsyncSelect)

 2000-03-21: Sander van Leeuwen <sandervl@xs4all.nl>
	- GDI32: Added RGB 555 to 565 conversion in dibsection blit.
                 (fixes wrong colors in RealPlayer 7 Update 1 (rm videos
                  only))
	- include\odinwrap.h: Disable heap checking by default for debug
                              build -> kills performance!

 2000-03-21: Edgar Buerkle <Edgar.Buerkle@gmx.net>
        - MSVCRT: Adding logging statement to _EH_prolog

 2000-03-21: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: optimized header/treeview for AMD cpuid
		    fixed dispinfo callbacks
		    reduced listview redraws
		    fixed wrong ASCII definitions in commctrl.h

 2000-03-20: David Raison <djr@lemur.co.uk>
 	- OLE32: Ported OleQueryCreateFromData, OleCreateFromData from
 	         wine/corel sources.
 	- OLEAUT32: Bugfix in ITypeLibImpl_GetDocumentation

 2000-03-20: Sander van Leeuwen <sandervl@xs4all.nl>
	- WSOCK32: Fixed relay bug in WSAAsyncSelect (delete relay slot 
                   with same socket nr & window handle; there can
                   be more selects per window)

 2000-03-19: David Raison <djr@lemur.co.uk>
 	- OLE32: Bugfixes.
 	         Ported changes from wine/corel sources.
 	         Created ReadClassStm, WriteClassStm, ProgIDFromCLSID

 2000-03-19: Sander van Leeuwen <sandervl@xs4all.nl>
	- ODINCRT: Fixed FS wrapper for _fdopen & others in file.cpp
                   (missing SetFS)

 2000-03-19: Michal Necasek <mike@mendelu.cz>
        - DINPUT: Few fixes, now Fallout 1/2 almost works

 2000-03-18: Michal Necasek <mike@mendelu.cz>
        - DDRAW: Fixed messed up DPA callback calling convention
                 Added some transparent blit code which was
                 mysteriously missing
